--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Anybody:wght@200;300;400;500;900&display=swap');
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+*{
+    box-sizing: border-box;
+    margin: 0;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+:root {
+    --color--background: rgb(243, 243, 243);
+    --color--background-second: rgb(236, 236, 236);
+    --color--text--primary: rgb(0, 0, 0);
+    --color--text--second: rgb(0, 143, 140);
+    --font--family: 'Anybody', cursive;
+    ;
+}
+
+body {
+    background-color: var(--color--background);
+    width: 100% !important;
+}
