--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,10 +10,10 @@
     display: none;
 }
 :root {
-    --color--background: rgb(243, 243, 243);
-    --color--background-second: rgb(236, 236, 236);
+    --color--background: rgb(242, 242, 242);
+    --color--background-second: rgb(199, 202, 217);
     --color--text--primary: rgb(0, 0, 0);
-    --color--text--second: rgb(0, 143, 140);
+    --color--text--second: rgb(65, 127, 166);
     --font--family: 'Anybody', cursive;
     ;
 }
@@ -21,4 +21,5 @@
 body {
     background-color: var(--color--background);
     width: 100% !important;
+    height: 100vh;
 }
