--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,7 @@
 :root {
     --color--background: rgb(242, 242, 242);
     --color--background-second: rgb(199, 202, 217);
+    --color--background-options: rgba(172, 174, 185, 0.795);
     --color--text--primary: rgb(0, 0, 0);
     --color--text--second: rgb(65, 127, 166);
     --font--family: 'Anybody', cursive;
