--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -4,6 +4,10 @@
     width: 100% !important;
 }
 
+//*** Color activar ***//
+.option_active{
+    color: var(--color--text--second);
+}
 //**************** Scroll Header *******************//
 .header_esconder{
     transform: translateY(-100%);
@@ -15,9 +19,15 @@
     top: 0;
     height: 18% !important;
     transition: all .4s;
-    border-bottom: 1px solid #FD8A5C;
+    background-color: var(--color--background);
+    z-index: 9899;
+    border-bottom: 1px solid var(--color--background-second);
     .header_menu {
+        transition: all .4s;
         margin-top: -1.8rem !important;
+        li{
+            height: 2rem !important;
+        }
     }
   }
 //***************************************************//
@@ -71,9 +81,19 @@
                 margin: 0 auto;
                 margin-top: 2rem;
                 font-size: 1rem;
+                background-image: linear-gradient(90deg ,var(--color--text--second),var(--color--text--second));
+                background-repeat: no-repeat;
+                background-size: 0% 2px;
+                background-position: center bottom;
+                transition: background-size .4s ease-in-out;
+                // &:hover{
+                //     color: var(--color--text--second);
+                // }
                 &:hover{
+                    background-size: 100% 2px;
+                }
+                &:active{
                     color: var(--color--text--second);
-                    transition: .4s;
                 }
             }
         }
