--- a/src/app/components/curriculum/curriculum.component.html
+++ b/src/app/components/curriculum/curriculum.component.html
@@ -1,21 +1,42 @@
-<main class="main">
+<main>
 <!-- <h1 class="text-center">Currículum</h1> -->
     <!-- Bloque experiencia -->
-    <div class="main_ex">
-        <h3>Experiencia laboral</h3>
-        <section class="main_ex_cont" *ngFor="let curri of ListCurriculum">
-            <div class="main_ex_cont_img">
-                <img [src]="curri.logo" alt="">
-                <h5>{{curri.empresa}}</h5>
-            </div>
-            <ul class="main_ex_cont_list">
-                <li *ngFor="let destalles of curri.detalles">
-                    <h4>{{destalles.cargo}}</h4>
-                    <h5>{{destalles.tiempo}}</h5>
-                    <p>{{destalles.descripcion}}</p>
-                </li>
-            </ul>
-        </section>
-    </div>
+    <ng-container  class="main">
+        <div class="main_ex">
+            <h3>Experiencia laboral</h3>
+            <section class="main_ex_cont" *ngFor="let curri of ListCurriculum">
+                <div class="main_ex_cont_img">
+                    <img [src]="curri.logo" alt="">
+                    <h5>{{curri.empresa}}</h5>
+                </div>
+                <ul class="main_ex_cont_list">
+                    <li *ngFor="let destalles of curri.detalles">
+                        <h4>{{destalles.cargo}}</h4>
+                        <h5>{{destalles.tiempo}}</h5>
+                        <p>{{destalles.descripcion}}</p>
+                    </li>
+                </ul>
+            </section>
+        </div>
+    </ng-container>
+
+    <ng-container  class="main">
+        <div class="main_ex">
+            <h3>Educación</h3>
+            <section class="main_ex_cont" *ngFor="let educa of ListEducacion">
+                <div class="main_ex_cont_img">
+                    <img [src]="educa.logo" alt="">
+                    <h5>{{educa.institucion}}</h5>
+                </div>
+                <ul class="main_ex_cont_list">
+                    <li *ngFor="let destalles of educa.detalles">
+                        <h4>{{destalles.titulo}}</h4>
+                        <h5>{{destalles.tiempo}}</h5>
+                    </li>
+                </ul>
+            </section>
+        </div>
+    </ng-container>
 
 </main>
+
