--- a/src/app/components/curriculum/curriculum.component.scss
+++ b/src/app/components/curriculum/curriculum.component.scss
@@ -6,9 +6,6 @@ main{
     font-family: var(--font--family);
 }
 
-.timepo_linea{
-
-}
 //********************************************
 
 //****** Linea del tiempo ******//
@@ -83,6 +80,8 @@ ul li:last-child::before{
             display: flex;
             flex-direction: column;
             align-items: self-end;
+            animation-name: leftTituloAnimacion;
+            animation-duration: 1s;
 
             &:last-of-type{
                 margin-bottom: 4rem;
@@ -97,6 +96,8 @@ ul li:last-child::before{
             }
         
             &_cont{
+                animation-name: leftAnimacion;
+                animation-duration: 1.5s;
                 width: 80%;
                 display: flex;
                 flex-direction: column;
@@ -151,11 +152,23 @@ ul li:last-child::before{
 
 
 // Animaciones
-// animation-name: bottAnimacion;
+// animation-name: leftAnimacion;
 // animation-duration: 1.5s;
-@keyframes bottAnimacion{
+@keyframes leftAnimacion{
     from {
-        transform: translateY(50px);
+        transform: translateX(-50px);
+        opacity: 0;
+    }
+    
+    to {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
+
+@keyframes leftTituloAnimacion{
+    from {
+        transform: translateX(-10rem);
         opacity: 0;
     }
     
