--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,21 @@
 // ::-webkit-scrollbar {
 //     display: none;
 // }
+
+::-webkit-scrollbar{
+    width: 0.5rem;
+    background-color: var(--color--background);
+}
+::-webkit-scrollbar-track{
+    --webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
+    border-radius: 10px;
+    background-color: var(--color--background);
+}
+::-webkit-scrollbar-thumb{
+    border-radius: 3px;
+    background-color: #555454;
+    background-image: -webkit-linear-gradient(90deg,transparent,rgba(0, 0, 0, 0.4) 50%,transparent,transparent)
+}
 :root {
     --color--background: rgb(242, 242, 242);
     --color--background-second: rgb(199, 202, 217);
