--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -5,7 +5,7 @@
     </div>
     <ul class="header_menu col-md-6 text-center m-0">
         <li [routerLink]="['Andres_Martinez/Curriculum']">Currículum</li>
-        <li>Proyectos</li>
+        <li [routerLink]="['Andres_Martinez/Proyectos']">Proyectos</li>
         <li>Contacto</li>
     </ul>
 </header>
