--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -6,6 +6,6 @@
     <ul class="header_menu col-md-6 text-center m-0">
         <li [routerLink]="['Andres_Martinez/Curriculum']">Currículum</li>
         <li [routerLink]="['Andres_Martinez/Proyectos']">Proyectos</li>
-        <li>Contacto</li>
+        <li (click)="descargar()">Descargar CV</li>
     </ul>
 </header>
