--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -62,7 +62,21 @@
 }
 
 //movil vertical
-@media (max-width: 480px) {}
+@media (max-width: 480px) {
+    .home {
+        height: 65vh;
+    
+        &_block {
+            width: 100%;
+            text-align: center;
+            img {
+                width: 70%;
+                height: 70%;
+            }
+        }
+    }
+
+}
 
 
 
