--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -24,8 +24,8 @@
     }
 
     .home {
-    height: 72vh;
-
+        height: 72vh;
+        margin-bottom: 2rem;
         &_block {
             width: 80%;
             text-align: center;
