--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,3 +38,6 @@ body {
     background-color: var(--color--background);
     width: 100% !important;
 }
+.row {
+    --bs-gutter-x: 0 !important;
+  }
