--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -11,7 +11,57 @@
 
 
 // Escritorios
-@media screen and (min-width: 1024px) {}
+@media screen and (min-width: 1024px) {
+   .home {
+        height: 80vh;
+        &_block {
+            position: relative;
+            width: 70%;
+            display: flex;
+            text-align: center;
+            justify-content: center;
+            &_img{
+                width: 50%;
+                img {
+                    border-radius: 50%;
+                    width: 100%;
+                    height: 100%;
+                    animation-name: bottAnimacion;
+                    animation-duration: 1.5s;
+                }
+            }
+
+            &_presentacion {
+                width: 70%;
+                font-family: var(--font--family);
+                animation-name: bottAnimacion;
+                animation-duration: 1.8s;
+                display: flex;
+                flex-direction: column;
+                align-self: center;
+                position: relative;
+                h4 {
+                    font-size: 3rem;
+                    width: 100%;
+                    font-weight: 500;
+                    letter-spacing: .2rem;
+                    height: 3.5rem;
+                    // margin-top: -5rem;
+                }
+
+                p {
+                    width: 75%;
+                    margin: 0 auto;
+                    text-align: justify;
+                    font-size: 1.2rem;
+                    
+                }
+            }
+        }
+
+    }
+
+}
 
 // telefono
 @media screen and (min-width: 768px) and (max-width: 1190px) {
@@ -24,33 +74,38 @@
             text-align: center;
             justify-content: center;
             &_img{
-                width: 50%;
+                width: 60%;
                 img {
                     border-radius: 50%;
-                    width: 300px;
-                    height: 300px;
+                    width: 100%;
+                    height: 100%;
                     animation-name: bottAnimacion;
                     animation-duration: 1.5s;
                 }
             }
 
             &_presentacion {
-                width: 50%;
-                margin-top: 3rem;
+                width: 70%;
                 font-family: var(--font--family);
                 animation-name: bottAnimacion;
                 animation-duration: 1.8s;
+
+                display: flex;
+                flex-direction: column;
+                align-self: center;
+                position: relative;
                 h4 {
-                    font-size: 1.6rem;
+                    font-size: 2rem;
                     font-weight: 500;
                     letter-spacing: .2rem;
+                    height: 2rem;
                 }
 
                 p {
                     width: 80%;
                     margin: 0 auto;
                     text-align: justify;
-                    font-size: .9rem;
+                    font-size: 1rem;
                 }
             }
         }
