--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <header id="header" class="header row justify-content-center m-0">
 
     <div class="header_encabezado text-center col-md-6 m-0">
-        <span [routerLink]="['Andres_Martinez']" class="">Juan Andres Pinzón Martinez</span>
+        <span [routerLink]="['Andres_Martinez']" class="">Juan Andrés Pinzón Martínez</span>
         <h4>Desarrollador de software</h4>
     </div>
     <ul class="header_menu col-md-6 text-center m-0">
